--- a/src/index.css
+++ b/src/index.css
@@ -1283,7 +1283,7 @@ html:lang(en) .p-result__type {
   padding: 0.5em 1em;
   z-index: 10000;
   border-radius: 2em;
-  background: var(--marisa);
+  background: var(--light-orange);
 }
 
 .c-price {
