--- a/src/index.css
+++ b/src/index.css
@@ -974,6 +974,9 @@ input {
   border-color: transparent;
 }
 .c-entity--Misfortune {
+  border-color: color-mix(in srgb, var(--f-light-purple) var(--opacity-border), transparent);
+}
+.c-entity--Misfortune-Unremovable {
   border-color: color-mix(in srgb, var(--f-purple) var(--opacity-border), transparent);
 }
 .c-entity__text {
@@ -1676,6 +1679,7 @@ html:lang(en) .p-result__type {
   --f-blue: dodgerblue;
   --f-gold: #eebe42;
   --f-red: orangered;
+  --f-light-purple: mediumorchid;
   --f-purple: purple;
   --f-brown: #dabfa2;
 }
