--- a/src/index.css
+++ b/src/index.css
@@ -413,7 +413,7 @@ input {
   height: 100%;
   background: var(--overlay);
   color: var(--white);
-  z-index: 999;
+  z-index: var(--z-4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -423,7 +423,7 @@ input {
   background: var(--f-brown);
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: var(--z-2);
 }
 
 .p-map__inner {
@@ -445,7 +445,7 @@ input {
   --padding: 0.5em;
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: var(--z-2);
   box-shadow: 0 0.5em 0.5em -0.5em var(--shadow);
   background: var(--white);
   display: flex;
@@ -494,7 +494,7 @@ input {
   position: sticky;
   top: 0;
   background: var(--white);
-  z-index: 9999;
+  z-index: var(--z-2);
 }
 
 .p-holdings__resizer {
@@ -624,14 +624,16 @@ input {
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: var(--z-1);
 }
-
+.c-map-icon__img {
+  position: absolute;
+  z-index: var(--z-1);
+}
 .c-map-icon__bg {
+  position: absolute;
   top: 0;
   left: 0;
-  position: absolute;
-  z-index: -1;
 }
 
 .c-map-icon__bg--active {
@@ -830,7 +832,7 @@ input {
   background: var(--light-gray);
   height: var(--control-height);
   width: 100%;
-  z-index: 1000;
+  z-index: var(--z-5);
 }
 .p-control__inner {
   display: flex;
@@ -1003,7 +1005,7 @@ html:lang(en) .c-entity__text {
   border-radius: 4px;
 }
 .c-card__text {
-  z-index: 1;
+  z-index: var(--z-1);
   color: var(--f-white);
   text-shadow: var(--text-shadow);
 }
@@ -1019,7 +1021,7 @@ html:lang(en) .c-entity__text {
   height: 100%;
   background: var(--f-white);
   opacity: var(--opacity-overlay);
-  z-index: -1;
+  z-index: var(--z--1);
 }
 
 .c-card__img {
@@ -1076,7 +1078,7 @@ html:lang(en) .c-entity__text {
   --dot-color: var(--orange);
   display: flex;
   column-gap: var(--dot-size);
-  z-index: 9999;
+  z-index: var(--z-4);
   position: relative;
 }
 .c-request {
@@ -1117,7 +1119,7 @@ html:lang(en) .c-entity__text {
   bottom: 100%;
   left: 50%;
   transform: translate(-50%);
-  z-index: 9999;
+  z-index: var(--z-6);
 }
 .c-request__dot:hover:after {
   content: attr(data-name);
@@ -1132,7 +1134,7 @@ html:lang(en) .c-entity__text {
   justify-content: center;
   align-items: center;
   pointer-events: none;
-  z-index: 9999;
+  z-index: var(--z-6);
 }
 .c-request:first-child .c-request__dot:hover:after {
   left: calc(0% - 0.3em);
@@ -1153,23 +1155,23 @@ html:lang(en) .c-entity__text {
   position: relative;
   width: fit-content;
   font-size: 0.8em;
-  z-index: 1;
+  z-index: var(--z-1);
   color: var(--f-white);
 }
 .p-result > * {
   position: absolute;
-  z-index: 2;
+  z-index: var(--z-2);
 }
 .p-result__name {
   bottom: 13%;
   left: 0;
   background: color-mix(in srgb, var(--f-black) 70%, transparent);
-  z-index: 3;
+  z-index: var(--z-3);
   padding: 0 0.3em;
 }
 .p-result__background {
   position: relative;
-  z-index: 0;
+  z-index: var(--z-0);
 }
 .p-result__spellcard {
   top: 30%;
@@ -1202,7 +1204,7 @@ html:lang(en) .p-result__type {
 .p-result__exhibit {
   right: 10%;
   top: 30%;
-  z-index: 1;
+  z-index: var(--z-1);
 }
 
 .p-filter {
@@ -1540,7 +1542,7 @@ html:lang(en) .p-result__type {
   width: 100%;
   height: 100%;
   background: repeating-conic-gradient(transparent, transparent 12deg, var(--f-red) 12deg 14deg);
-  z-index: -1;
+  z-index: var(--z--1);
 }
 
 .c-status-effects {
@@ -1563,7 +1565,7 @@ html:lang(en) .p-result__type {
   text-align: center;
   height: fit-content;
   padding: 0.5em 1em;
-  z-index: 10000;
+  z-index: var(--z-6);
   border-radius: 2em;
   background: var(--light-orange);
 }
@@ -1626,6 +1628,16 @@ html:lang(en) .p-result__type {
   font-weight: bold;;
 }
 
+.p-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--overlay);
+  z-index: var(--z-7);
+}
+
 :root {
   color-scheme: light dark;
   --padding-inner: 0.625em;
@@ -1642,6 +1654,16 @@ html:lang(en) .p-result__type {
   --entity-margin: 0.5em;
   --entity-border: 2px;
   --map-height: 144px;
+
+  --z--1: -1;
+  --z-0: 0;
+  --z-1: 1;
+  --z-2: 2;
+  --z-3: 3;
+  --z-4: 4;
+  --z-5: 5;
+  --z-6: 6;
+  --z-7: 7;
 
   --white: light-dark(#fff, #121212);
   --black: light-dark(#000, #fff);
