--- a/src/index.css
+++ b/src/index.css
@@ -1181,9 +1181,8 @@ html:lang(en) .c-entity__text {
   z-index: var(--z-3);
   padding: 0 0.3em;
 }
-.p-result__background {
-  position: relative;
-  z-index: var(--z-0);
+.p-result__avatar {
+  max-height: 100%;
 }
 .p-result__spellcard {
   top: 30%;
@@ -1217,6 +1216,10 @@ html:lang(en) .p-result__type {
   right: 10%;
   top: 30%;
   z-index: var(--z-1);
+}
+.p-result__background {
+  position: relative;
+  z-index: var(--z-0);
 }
 
 .p-filter {
